--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -2,7 +2,7 @@ name: Website Deployment
 on:
   push:
     branches:
-      - main
+      - master
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -35,6 +35,7 @@ jobs:
       - name: Test code
         run: npm run test
       - name: Upload test report
+        # if: 
         uses: actions/upload-artifact@v3
         with:
           name: test-report
