fix conditional job

--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -83,5 +83,5 @@ jobs:
       - name: Output information
         run: |
           echo "Something went wrong..."
-          echo "${{ github }}"
+          echo "${{ toJSON(github) }}"
 
